==> wykys/avr-makefile/src/uart.c <==
#include "uart.h"

void uart_init(void)
{
  unsigned int ubrr = F_CPU/16/9600-1;

  /* Set baud rate */
	UBRRH = (unsigned char)(ubrr>>8);
	UBRRL = (unsigned char)ubrr;
	/* Enable receiver and transmitter */
	UCSRB = (1<<RXEN)|(1<<TXEN);
	/* Set frame format: 8data, 2stop bit */
	//UCSRC = (1<<URSEL)|(1<<USBS)|(3<<UCSZ0);
	/* Set frame format: 8data, 1stop bit */
	UCSRC = (1<<URSEL)|(3<<UCSZ0);

	UCSRB |= 1<<RXCIE;
}

void uart_putc(unsigned char data)
{
	/* Wait for empty transmit buffer */
	while ( !( UCSRA & (1<<UDRE)) );
	/* Put data into buffer, sends the data */
	UDR = data;
}

void uart_puts(char str[])
{
  for (int i=0; str[i]; i++)
    uart_putc(str[i]);
}
